@@ -1,3 +1,9 @@
+2005-02-23  Cedric Gustin  <cedric.gustin@swing.be>
+
+	* gobject/pygtype.c (add_property_docs): Do not use
+	g_string_append_printf with a NULL argument, as it crashes on
+	win32. Fixes bug #166546.
+	
 2005-01-18  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
 	* gtk/gtkmodule.c (init_gtk): On Python >= 2.4, don't call
